BB-1242 Update Client and adjust Contract Tests for verification
